# rust-music_tui

./: .gitignore  Cargo.toml  ValuableNotes.md  flacCheck.sh
src/: main.rs
